style.css
/* ... */
  footer li a {
    margin: 0 8px;
    font-size: 14px;
  }
  .copyrigth {
    font-size: 10px;
    padding: 10px 0;
  }
  
  
  /*Button All*/
  .buttonPlus {
    display: inline-block;
    background-color: #e61652;
    color: #fff;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    font-weight: bold;
    border: none;
    border-radius: 15px;
    cursor: pointer;
    transition: transform 0.3s ease;
    position: relative;
    overflow: hidden;
    box-shadow: -1px 3px 5px #ffffff;
  }
  .buttonPlus:hover {
    animation: bounce 500ms;
    box-shadow: none;
  }
  @keyframes bounce {
    0% {
      transform: scale(1);
      
    }
    50% {
      transform: scale(1.2);
    }
    100% {
      transform: scale(1);
    }
  }
  
  
  /*Club*/
  #club h1 {
    padding: 100px 0 0 0;  
  }
  #club h2 {
  margin:30px 0 10px 0;
  }
  /*Club carousel*/
  #club .carousel-item {
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: 450px;
    flex: 1 0 250px;
    margin: 10px 0 20px 15px;
    scroll-snap-align: start;
  }
  #club .carousel-items {
    display: flex;
    overflow-x: scroll;
    padding: 15px;
  }
  #club .carousel img {
    width:100%
  }
  #club .fa-reply{
    color: #000;
    font-size: 30px;
    margin: 0px 0px 0 180px;
  }
  /*flip card + polaroid*/
  #club .flip-card {
    background-color: transparent;
    width: 250px;
    height: 320px;
    perspective: 1000px;
  }
  #club .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
  }
  #club .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }
  /* #club .flip-card-front img {
    width: 100%;
  } */
  #club .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
  }
  #club .flip-card-front {
    background: #fff;
    color: #000;
    padding: 10px;
    box-shadow: -1px 3px 5px #818181;
  }
  #club .flip-card-back {
    background-color: #fff;
    color: #000;
    transform: rotateY(180deg);
    padding: 10px;
    box-shadow: -1px 3px 5px #818181;
  }
  /*Club inclinaison polaroid*/
  #club .pol1{
    transform: rotate(-3deg);
  }
  #club .pol2{
    transform: rotate(4deg);
  }
  #club .pol3{
    transform: rotate(-6deg);
  }
  #club .pol4{
    transform: rotate(5deg);
  }
  #club .pol5{
    transform: rotate(6deg);
  }
  #club .pol6{
    transform: rotate(-4deg);
  }
  #club .fa-circle-plus{
    margin-left: 210px;
    font-size: 20px;
    opacity: 0.5;
  }
  #club .club-ancre{
    color: #e61652;
  }
  #club .club-ancre:hover{
    opacity: 0.5;
    transition: all 400ms ease-in;
  }
  
  
  /*À la une*/
  #a-la-une h1 {
    padding: 100px 0 0 0;  
  }
  #a-la-une h2 {
    margin: 30px 0 -18px 0;  
  }
  #a-la-une img{
    border: 1px solid #fff;
    border-radius: 20px;
    padding: 0px;
    margin:  0 0 10px 0;
    width: 320px;
  }
  #a-la-une a{
    color: #fff;
    transform: scale(1);
  }
  #a-la-une .card {
    width: 340px;
    margin: 10px auto 20px auto;
    padding: 0 0 10px 0;
    border-radius:25px;
    border: 3px solid #e6dbc6;
  }
  
  #a-la-une .card:hover{
    transition: all 400ms ease-out;
    transform: scale(1.01);
    opacity: 0.6;
  }
  
  #a-la-une .card h3{
    margin: 10px 0 0 0;
  }
  #a-la-une .button-article {
    position: relative;
    background-color: #e61652;
    border: 1px solid #fff;
    border-radius: 20px 0 20px 0;
    width: 45%;
    padding: 10px 0;
    margin: -56px 0 0px 177px;
  }
  #a-la-une .buttonPlus{
    margin: 0 0 40px 0;
  }
  
  /*A la une Article*/
  #article{
    margin: 0 10px;
  }
  #article h1 {
    padding: 100px 0 0 0;  
    text-transform: uppercase;
  }
  #article img {
    margin: 10px 0px;
  }
  #article h2 {
    margin: 20px 0 0 0;
  }
  #article a p {
    color: #fff;
    text-decoration:underline;
  }
  #article a p:hover {
    color:#e61652;
    transition: all 400ms ease-out;
  }
  #article .buttonPlus {
    margin: 0 0 40px 0;
  }
  
  /*Archives*/
  
  #archives h1 {
    padding: 100px 0 0 0;  
  }
  #archives h2{
    margin: -10px 0 -10px 0;
    padding: 0;
  }
  #archives .archives-menu{
    margin: 30px 5px;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  #archives .archives-menu a{
    font-size: 22px;
    color: #030303;
    background-color: #e6dbc6;
    margin: 10px 0;
    padding: 10px;
    width: 100%;
    border-radius: 20px;
    border: 1px solid #fff;
    box-shadow: -1px 3px 5px #818181;
  }
  #archives .archives-menu a:hover{
    color: #e6dbc6;
    background-color: #030303;
    transition: all 400ms ease-in;
    box-shadow: none;
    border: 1px solid #e6dbc6;
  }
  
  
  /*Top adresse*/
  #top-adresses h1 {
    padding: 100px 0 0 0;  
  }
  #top-adresses h2{
    margin: 30px 0 10px 0;
  }
  #top-adresses .top-adresses-menu{
    margin: 30px 5px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }
  
  /*Top adresses carousel*/
  #top-adresses .carousel-item {
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: 450px;
    flex: 1 0 250px;
    margin: 0px 15px 0px 0px;
    scroll-snap-align: start;
  }
  #top-adresses .carousel-items {
    display: flex;
    overflow-x: scroll;
    padding: 20px 0 20px 5px;
  }
  #top-adresses .flip-card {
    background-color: transparent;
    width: 300px;
    height: 380px;
    perspective: 1000px; /* Remove this if you don't want the 3D effect */
  }
  #top-adresses .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
  }
  #top-adresses .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }
  #top-adresses .flip-card-front img {
    width: 299px;
    padding: 0px;
    border: none;
    border-radius: 20px 20px 0 0;
  }
/* ... */

